--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
             Colin Gillette Development
         </h1>
         <p class="header-title-explanation">
-            Welcome to a place where I can show you some of what I can do. Below you will find examples of my work, and good methods
-            to contact me if it seems interesting to you.
+            Welcome to a place where I can show you some of what I can do. Below you will find examples of my work, and good methods to contact me if it seems interesting to you.
+        </p>
+    </div>
+    <div class="showcase">
+        <p class="showcase-github">
+            You can find my work at my <a href="https://github.com/colingillette">GitHub</a> account. Below, I will showcase a few of my favorites.
         </p>
     </div>
 </body>
