--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     </div>
     <div class="showcase">
         <p class="showcase-github">
-            You can find my work at my <a href="https://github.com/colingillette">GitHub</a> account. Below, I will showcase a few of my favorites.
+            You can find my work at my <a href="https://github.com/colingillette" class="github-link">GitHub</a> account. Below, I will showcase a few of my favorites.
         </p>
+        <!-- Add a table that showcase specific portfolio examples from Github -->
     </div>
 </body>
 </html>
