added login screen

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <h1 class="header-title">
             Colin Gillette Development
         </h1>
+        <p class="header-login">
+            Want to start or continue a partnership? Log in <a class="login-link" href="login.html">here</a> to track your requests, or to make a new one.
+        </p>
         <p class="header-title-explanation">
             Welcome to a place where I can show you some of what I can do. Below you will find examples of my work, and good methods to contact me if it seems interesting to you.
         </p>
@@ -22,6 +25,9 @@
             You can find my work at my <a href="https://github.com/colingillette" class="github-link">GitHub</a> account. Below, I will showcase a few of my favorites.
         </p>
         <!-- Add a table that showcase specific portfolio examples from Github -->
+    </div>
+    <div class="footer">
+
     </div>
 </body>
 </html>
