--- a/index.html
+++ b/index.html
@@ -9,25 +9,10 @@
     <script src="scripts/main.js"></script>
 </head>
 <body>
-    <div class="header">
-        <h1 class="header-title">
-            Colin Gillette Development
-        </h1>
-        <p class="header-login">
-            Want to start or continue a partnership? Log in <a class="login-link" href="login.html">here</a> to track your requests, or to make a new one.
-        </p>
-        <p class="header-title-explanation">
-            Welcome to a place where I can show you some of what I can do. Below you will find examples of my work, and good methods to contact me if it seems interesting to you.
-        </p>
-    </div>
-    <div class="showcase">
-        <p class="showcase-github">
-            You can find my work at my <a href="https://github.com/colingillette" class="github-link">GitHub</a> account. Below, I will showcase a few of my favorites.
-        </p>
-        <!-- Add a table that showcase specific portfolio examples from Github -->
-    </div>
-    <div class="footer">
-
+    <div>
+        <h1>Colin Gillette Development</h1>
+        
+        <p>This is the future home of a pretty dope site.</p>
     </div>
 </body>
 </html>
