--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Colin Gillette</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-    <link rel="shortcut icon" href="GilletteLogo.png" />
+    <link rel="shortcut icon" type="image/png" href="/GilletteLogo.png" />
 </head>
 <body>
     <div>
