--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Colin Gillette</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-    <link rel="shortcut icon" type="image/png" href="/GilletteLogo.png" />
+    <link rel="shortcut icon" type="image/png" href="/img/GilletteLogo.png" />
 </head>
 <body>
     <div>
+        <img class="header-image" src="/img/GilletteLogo.png" alt="Gillette Logo">
         <h1>Colin Gillette Development</h1>
         
         <p>This is the future home of a pretty dope site.</p>
