adding styling elements

--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Colin Gillette</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
     <link rel="shortcut icon" type="image/png" href="/img/GilletteLogo.png" />
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
 </head>
 <body>
-    <div>
-        <img class="header-image" src="/img/GilletteLogo.png" alt="Gillette Logo">
-        <h1>Colin Gillette Development</h1>
+    <div class="header">
+        <h1>Welcome! My name is Colin Gillette.</h1>
         
-        <p>This is the future home of a pretty dope site.</p>
+        <p>I'm a <span class="bold">Development</span> and <span class="bold">Information Technology</span> Specialist</p>
+        <p>Click below to see what that means.</p>
+        <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="glyphicon glyphicon-chevron-down"></i></button>
     </div>
 </body>
 </html>
