--- a/index.html
+++ b/index.html
@@ -9,9 +9,38 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- jQuery CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <script>  
+        $(function ()
+        {
+            $(".main-body").hide();
+            $("#move-button2").hide();
+        });
+        
+        $(document).ready(function ()
+        {
+            $("#move-button").click(function ()
+            {
+                $(".main-body").toggle(1250);
+                $("#move-button").toggle("fast");
+                $("#move-button2").toggle("fast");
+            });
+
+            $("#move-button2").click(function ()
+            {
+                $(".main-body").toggle(1250);
+                $("#move-button").toggle("fast");
+                $("#move-button2").toggle("fast");
+            });
+        });
+    </script>
+
     <link rel="shortcut icon" type="image/png" href="/img/GilletteLogo.png" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
 </head>
+
 <body>
     <div class="header">
         <h1 id="title">Welcome! My name is Colin Gillette.</h1>
@@ -19,6 +48,26 @@
         <p id="sub-title">I'm a <span class="bold">Development</span> and <span class="bold">Information Technology</span> Specialist</p>
         <p id="redirect">Click below to see what that means.</p>
         <button type="button" id="move-button" class="btn btn-info btn-circle btn-lg"><i class="glyphicon glyphicon-chevron-down"></i></button>
+        <button type="button" id="move-button2" class="btn btn-info btn-circle btn-lg"><i class="glyphicon glyphicon-chevron-up"></i></button>
+    </div>
+
+    <div class="main-body">
+        <div class="container text-center">
+            <h3 class="reveal-title">Here are some examples:</h3>
+
+            <div class="row well">
+                <div class="col-sm-2">
+                    <img class="display-case" src="img/GilletteLogo.png" alt="Gillette logo">
+                </div>
+                <div class="col-sm-8">
+                    <h2>Colin Gillette Portfolio Site</h2>
+                    <p class="information"><strong>Development</strong></p>
+                </div>
+                <div class="col-sm-2">
+                    <a href="/index.html"><p class="link">See it here.</p></a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
