scrolling animation on chevron press

--- a/index.html
+++ b/index.html
@@ -31,16 +31,31 @@
         <div class="container text-center">
             <h3 class="reveal-title">Here are some examples:</h3>
 
-            <div class="row well">
+            <!-- Portfolio Site -->
+            <div id="first-display" class="row well">
                 <div class="col-sm-2">
                     <img class="display-case" src="img/GilletteLogo.png" alt="Gillette logo">
                 </div>
                 <div class="col-sm-8">
                     <h2>Colin Gillette Portfolio Site</h2>
-                    <p class="information"><strong>Development</strong></p>
+                    <p class="information"><strong>Development Opportunities</strong></p>
                 </div>
                 <div class="col-sm-2">
                     <a href="/index.html"><p class="link">See it here.</p></a>
+                </div>
+            </div>
+
+            <!-- MFN IT Work -->
+            <div id="first-display" class="row well">
+                <div class="col-sm-2">
+                    <img class="display-case" src="img/MFN.png" alt="MFN logo">
+                </div>
+                <div class="col-sm-8">
+                    <h2>Managed Financial Networks: System Operator</h2>
+                    <p class="information"><strong>IT Helpdesk Responsibilities</strong></p>
+                </div>
+                <div class="col-sm-2">
+                    <p>You can see a list of my responsibilities on my </p><a href="/index.html"><p class="link">resume.</p></a>
                 </div>
             </div>
         </div>
