--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <!-- MFN IT Work -->
             <div id="first-display" class="row well">
                 <div class="col-sm-2">
-                    <img class="display-case" src="img/MFN.png" alt="MFN logo">
+                    <img class="display-case" src="img/MFN.PNG" alt="MFN logo">
                 </div>
                 <div class="col-sm-8">
                     <h2>Managed Financial Networks: System Operator</h2>
