Animation and color fix for drop button

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                     <p class="information"><strong>Development Opportunities</strong></p>
                 </div>
                 <div class="col-sm-2">
-                    <a href="/index.html"><p class="link">See it here.</p></a>
+                    <a href="https://github.com/colingillette/colingillette.github.io" target="_blank"><p class="link">See it on Github.</p></a>
                 </div>
             </div>
 
             <!-- MFN IT Work -->
-            <div id="first-display" class="row well">
+            <div class="row well">
                 <div class="col-sm-2">
                     <img class="display-case" src="img/MFN.PNG" alt="MFN logo">
                 </div>
