--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
                     <p>You can see a list of my responsibilities on my </p><a href="/index.html"><p class="link">resume.</p></a>
                 </div>
             </div>
+
         </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+        <p class="footer-line">This site is owned and operated by Colin Gillete. You can see my Github page <a class="link footer-link" href="https://github.com/colingillette" target="_blank">here</a>.</p>
     </div>
 </body>
 </html>
