re-doing site based on amazing mcglone tutorial

--- a/index.html
+++ b/index.html
@@ -1,65 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Colin Gillette</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!-- jQuery CDN -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/index.js"></script>
-    <link rel="shortcut icon" type="image/png" href="/img/GilletteLogo.png" />
-    <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-</head>
-
-<body>
-    <!-- Header for site -->
-    <div class="header">
-        <h1 id="title">Welcome! My name is Colin Gillette.</h1>
-        
-        <p id="sub-title">I'm a <span class="bold">Development</span> and <span class="bold">Information Technology</span> Specialist</p>
-        <p id="redirect">Click below to see what that means.</p>
-        <button type="button" id="move-button" class="btn btn-info btn-circle btn-lg"><i id="glyph" class="glyphicon glyphicon-chevron-down"></i></button>
-    </div>
-
-    <!-- Revealed to show bulk of experience in a display case format -->
-    <div id="first-row" class="main-body">
-        <div class="container text-center">
-            <h3 class="reveal-title">Here are some examples:</h3>
-
-            <!-- Portfolio Site -->
-            <div id="first-display" class="row well">
-                <div class="col-sm-2">
-                    <img class="display-case" src="img/GilletteLogo.png" alt="Gillette logo">
-                </div>
-                <div class="col-sm-8">
-                    <h2>Colin Gillette Portfolio Site</h2>
-                    <p class="information"><strong>Development Opportunities</strong></p>
-                </div>
-                <div class="col-sm-2">
-                    <a href="https://github.com/colingillette/colingillette.github.io" target="_blank"><p class="link">See it on Github.</p></a>
-                </div>
-            </div>
-
-            <!-- MFN IT Work -->
-            <div class="row well">
-                <div class="col-sm-2">
-                    <img class="display-case" src="img/MFN.PNG" alt="MFN logo">
-                </div>
-                <div class="col-sm-8">
-                    <h2>Managed Financial Networks: System Operator</h2>
-                    <p class="information"><strong>IT Helpdesk Responsibilities</strong></p>
-                </div>
-                <div class="col-sm-2">
-                    <p>You can see a list of my responsibilities on my </p><a href="/index.html"><p class="link">resume.</p></a>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</body>
+	<head>
+		<title>Colin Gillette</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Colin Gillette!</h1>
+                <p>I'm a developer and designer based out of <strong>Springfield, MO</strong>. 
+                    <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:colingillette35@gmail.com">email</a></li>
+        		<li><a href="https://github.com/colingillette">github.com/colingillette</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
