--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Colin Gillette</title>
+        <title>Colin Gillette</title>
+        <link href="/css/main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<nav>
