--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
         <title>Colin Gillette</title>
-        <link href="/css/main.css" rel="stylesheet" type="text/css">
+        <link href="css/main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<nav>
