content tweaks before using jekyll

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     		<div class="blurb">
         		<h1>Hi there, I'm Colin Gillette!</h1>
                 <p>I'm a developer and designer based out of <strong>Springfield, MO</strong>. 
-                    <a href="/about">Read more about my life...</a></p>
+                    <br><a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
