implementation of jekyll

--- a/index.html
+++ b/index.html
@@ -1,30 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-        <title>Colin Gillette</title>
-        <link href="css/main.css" rel="stylesheet" type="text/css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Colin Gillette!</h1>
-                <p>I'm a developer and designer based out of <strong>Springfield, MO</strong>. 
-                    <br><a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:colingillette35@gmail.com">email</a></li>
-        		<li><a href="https://github.com/colingillette">github.com/colingillette</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Colin Gillette, developer
+---
+<div class="blurb">
+    <h1>Hi there, I'm Colin Gillette!</h1>
+    <p>I'm a developer and designer based out of <strong>Springfield, MO</strong>. 
+        <br><a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
