created layout and directory for blog posts

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Colin Gillette, developer
+title: Colin Gillette, Developer
 ---
 <div class="blurb">
     <h1>Hi there, I'm Colin Gillette!</h1>
