add content to home page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@ title: Colin Gillette, Developer
 ---
 <div class="blurb">
     <h1>Hi there, I'm Colin Gillette!</h1>
-    <p>I'm a developer and designer based out of <strong>Springfield, MO</strong>. 
-        <br><a href="/about">Read more about my life...</a></p>
+    <p>I'm a developer and designer based out of <strong>Springfield, MO</strong>.</p> 
+    <p>
+        In short, that means I've dedicated myself to trying to find creative solutions to technlogocial problems.
+        Please read take a look around the site and get to know me a bit better. If you'd like, you can email me at the link
+        below!
+    </p>
+    <p><a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
