remove bootstrap and increase font-sizing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Colin Gillette, Developer
     <p>I'm a developer and designer based out of <strong>Springfield, MO</strong>.</p> 
     <p>
         In short, that means I've dedicated myself to trying to find creative solutions to technlogocial problems.
-        Please read take a look around the site and get to know me a bit better. If you'd like, you can email me at the link
+        Please take a look around the site and get to know me a bit better. If you'd like, you can email me at the link
         below!
     </p>
     <p><a href="/about">Read more about my life...</a></p>
