setup contact form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@ title: Colin Gillette, Developer
     <p>
         In short, that means I've dedicated myself to trying to find creative solutions to technlogocial problems.
         Please take a look around the site and get to know me a bit better. If you'd like, you can email me at the link
-        below!
+        below! If you'd like to see some of my open-source work, you can click the link to my GitHub account in the footer.
+        If you're more interested in my professional career so far, you can see my 
+        <a href="https://www.linkedin.com/in/colingillette/">LinkedIn profile</a>, or go to my 
+        <a href="/cv">Curriculum Vitae</a>.
+    </p>
+    <p>
+        If you think there's a solution I can help you or your company with, please feel free to reach out to me at 
+        the email below. If you'd rather, you can also use <a href="/contact.html">this</a> form to reach out to me.
+        My passion is taking on new challenges and implemeneting the 
+        technologies that turn dreams into reality, and I'd love to hear from you if you think I can be of any help.
     </p>
     <p><a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+</div>
