--- a/contact.html
+++ b/contact.html
@@ -17,4 +17,6 @@ title: Contact Me
 
     <label for="message">What would you like me to know?</label>
     <textarea rows="5" cols="30" id="message" name="message"></textarea>
+
+    <submit>Submit</submit>
 </form>
