forgot submit button

--- a/contact.html
+++ b/contact.html
@@ -18,5 +18,5 @@ title: Contact Me
     <label for="message">What would you like me to know?</label>
     <textarea rows="5" cols="30" id="message" name="message"></textarea>
 
-    <submit>Submit</submit>
+    <input type="submit" value="Submit">
 </form>
