update form styles

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@ title: Contact Me
     <input type="email" id="email" name="email" required>
 
     <label for="message">What would you like me to know?</label>
-    <textarea rows="5" cols="30" id="message" name="message"></textarea>
+    <textarea rows="5" id="message" name="message"></textarea>
 
     <input type="submit" value="Submit">
 </form>
