re-design contact form and add it to navigation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Colin Gillette, Developer
     </p>
     <p>
         If you think there's a solution I can help you or your company with, please feel free to reach out to me at 
-        the email below. If you'd rather, you can also use this form to reach out to me.
+        the email below. If you'd rather, you can also use <a href="/contact">this form</a> to reach out to me.
         My passion is taking on new challenges and implemeneting the 
         technologies that turn dreams into reality, and I'd love to hear from you if you think I can be of any help.
     </p>
