change link colors again

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Colin Gillette, Developer
         below! If you'd like to see some of my open-source work, you can click the link to my GitHub account in the footer.
         If you're more interested in my professional career so far, you can see my 
         <a href="https://www.linkedin.com/in/colingillette/">LinkedIn profile</a>, or go to my 
-        <a href="/cv">Curriculum Vitae</a>.
+        <a href="/resume">Resum&#233;</a>.
     </p>
     <p>
         If you think there's a solution I can help you or your company with, please feel free to reach out to me at 
