edits to home page

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@ layout: default
 title: Colin Gillette, Developer
 ---
 <div class="blurb">
-    <h1>Hi there, I'm Colin Gillette!</h1>
-    <p>I'm a developer and designer based out of <strong>Springfield, MO</strong>.</p> 
+    <h1>Hello, I'm Colin Gillette!</h1>
+    <p>
+        I'm a developer and designer based out of <a href="https://www.springfieldmo.org/">Springfield, MO</a>.
+    </p> 
     <p>
         In short, that means I've dedicated myself to trying to find creative solutions to technlogocial problems.
         Please take a look around the site and get to know me a bit better. If you'd like, you can email me at the link
-        below! If you'd like to see some of my open-source work, you can click the link to my GitHub account in the footer.
+        below! If you'd like to see some of my open-source work, you can click the link to my <a href="https://github.com/colingllette">GitHub account</a> in the footer.
         If you're more interested in my professional career so far, you can see my 
         <a href="https://www.linkedin.com/in/colingillette/">LinkedIn profile</a>, or go to my 
         <a href="/resume">Resum&#233;</a>.
