edits to contact form style

--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,7 @@ title: Contact Me
     for any information you might need or want.
 </p>
 
-<form action="https://formspree.io/forms@colingillette.com" method="POST">
+<form id="contact-form" action="https://formspree.io/forms@colingillette.com" method="POST">
     <label for="fullName">What is your name?</label>
     <input type="text" id="fullName" name="fullName" required>
 
