--- a/contact/index.html
+++ b/contact/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Contact Me
 ---
 
+<h1>Contact Me!</h1>
+
 <p>
     Would you like to get in contact with me? I'd love to hear from you! You can use the following form to ask me
     for any information you might need or want.
