iframe addition for resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,5 +1,8 @@
 ---
-layout: default
+layout: resume
 title: Colin Gillette Resum&#233;
 ---
 
+<div class="resume-body">
+  <iframe id="iframepdf" src="/ColinGillette_Resume.pdf"></iframe>
+</div>
