--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@ title: Colin Gillette, Developer
         Please take a look around the site and get to know me a bit better. If you'd like, you can email me at the link
         below! If you'd like to see some of my open-source work, you can click the link to my <a href="https://github.com/colingllette">GitHub account</a> in the footer.
         If you're more interested in my professional career so far, you can see my 
-        <a href="https://www.linkedin.com/in/colingillette/">LinkedIn profile</a>, or go to my 
-        <a href="/resume">Resum&#233;</a>.
+        <a href="https://www.linkedin.com/in/colingillette/">LinkedIn profile</a>.
     </p>
     <p>
         If you think there's a solution I can help you or your company with, please feel free to reach out to me at 
