--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@ title: Colin Gillette, Developer
         <a href="https://www.linkedin.com/in/colingillette/">LinkedIn profile</a>.
     </p>
     <p>
-        If you think there's a solution I can help you or your company with, please feel free to reach out to me at 
-        the email below. If you'd rather, you can also use <a href="/contact">this form</a> to reach out to me.
-        My passion is taking on new challenges and implemeneting the 
-        technologies that turn dreams into reality, and I'd love to hear from you if you think I can be of any help.
+        I am working on creating a small video game, and am documenting the process at <a href="https://alexanderscorner.substack.com/">Alexander's Corner</a>.
+        The site will also explore lessons learned from the the industry, and my personal theories on game design. Check it out if you're interested! 
+        This site's blog will host the early entries in the series that go over the basics of the project.
     </p>
 </div>
