--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Colin Gillette, Developer
+title: Colin Alexander Gillette, Software Developer
 ---
 <div class="blurb">
     <h1>Hello, I'm Colin Gillette!</h1>
