--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@ title: Colin Alexander Gillette, Software Developer
 <div class="blurb">
     <h1>Hello, I'm Colin Gillette!</h1>
     <p>
-        I'm a developer and designer based out of <a href="https://www.springfieldmo.org/">Springfield, MO</a>.
+        I'm a developer, designer, and consultant in the St. Louis Metropolitan Area.
     </p> 
     <p>
-        In short, that means I've dedicated myself to trying to find creative solutions to technlogocial problems.
-        Please take a look around the site and get to know me a bit better. If you'd like, you can email me at the link
-        below! If you'd like to see some of my open-source work, you can click the link to my <a href="https://github.com/colingllette">GitHub account</a> in the footer.
-        If you're more interested in my professional career so far, you can see my 
-        <a href="https://www.linkedin.com/in/colingillette/">LinkedIn profile</a>.
-    </p>
-    <p>
-        I am working on creating a small video game, and am documenting the process at <a href="https://alexanderscorner.substack.com/">Alexander's Corner</a>.
-        The site will also explore lessons learned from the the industry, and my personal theories on game design. Check it out if you're interested! 
-        This site's blog will host the early entries in the series that go over the basics of the project.
+        I've dedicated myself to fiding creative solutions to technlogocial problems.
+        Please take a look around the site and get to know me a bit better. If you'd like, you can email me at the link in the footer
+        below! If you'd like to see some of my open-source work, you can click the link to my GitHub account in the footer.
+        If you're more interested in my professional career so far, you can see my LinkedIn profile. My blog will have more in-depth
+        thoughts and discussions on topic I think are worth diving into. You can use the navigation bar or 
+        <a href="https://colingillette.com/blog">this link to my blog</a> to see more.
     </p>
 </div>
