update blog for investment focus

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Colin Alexander Gillette, Software Developer
+title: Colin Alexander Gillette
 ---
 <div class="blurb">
     <h1>Hello, I'm Colin Gillette!</h1>
     <p>
-        I'm a developer, designer, and consultant in the St. Louis Metropolitan Area.
+        I'm a developer, consultant, and investor in the St. Louis Metropolitan Area.
     </p> 
     <p>
         I've dedicated myself to fiding creative solutions to technlogocial problems.
